# AT_RENDERER

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
at_renderer/: __main__.py
at_renderer/core/: at_renderer.py  types.py
at_renderer/web/: arguments.py  models.py  server.py
at_renderer/web/frontend/: package-lock.json  package.json
at_renderer/web/frontend/public/: index.html
at_renderer/web/frontend/src/: App.js  index.js
at_renderer/web/frontend/src/components/: Docview.jsx  Grid.jsx  Login.jsx
at_renderer/web/frontend/src/components/panel/: Control.jsx  Panel.jsx
at_renderer/web/frontend/src/components/panel/componentMethod/: ComponentMethod.jsx
at_renderer/web/frontend/src/components/panel/fetch/: Fetch.jsx
at_renderer/web/frontend/src/components/panel/href/: Href.jsx
