[tool.poetry]
name = "at-renderer"
version = "0.2.dev0"
description = ""
authors = ["grigadnal625 <grigandal625@gmail.com>"]
readme = "README.md"
exclude = ["at_renderer/web/frontend/node_modules", "at_renderer/web/frontend/node_modules/**/*"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
aio-pika = "^9.4.2"
hypercorn = "^0.17.3"
at-queue = {git = "https://github.com/grigandal625/AT_QUEUE.git", rev = "master"}
schema = "^0.7.7"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
